--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,21 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<!-- <archive>
+						<manifest>
+							<mainClass>
+								com.test.your.main.class.goes.Here
+							</mainClass>
+						</manifest>
+					</archive> -->
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.1</version>
 			</plugin>
