--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.polimi.csparqool</groupId>
 	<artifactId>csparqool</artifactId>
-	<version>1.1</version>
+	<version>1.1.1</version>
 	<name>csparqool</name>
 	<description>An object oriented language for c-sparql queries</description>
 	<inceptionYear>2014</inceptionYear>
@@ -65,6 +65,11 @@
 	</distributionManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -112,11 +117,6 @@
 					<groupId>log4j</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.6</version>
 		</dependency>
 	</dependencies>
 
